--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,80 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  @apply ring-0 outline-0 focus:ring-2 ring-primary/75 focus:ring-primary/75 outline-primary/75 font-body border-border;
+}
+
+/* Hide scrollbar for all elements */
+*::-webkit-scrollbar {
+  display: none;
+}
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+h1 {
+  @apply font-display text-text-light text-5xl font-semibold tracking-wide leading-[1.2];
+}
+
+h2 {
+  @apply font-display text-text-light text-3xl font-medium tracking-wide;
+}
+
+h3 {
+  @apply font-display text-text-light font-medium tracking-wider;
+}
+
+p {
+  @apply tracking-wide leading-7;
+}
+
+span {
+  @apply text-xs;
+}
+
+input[type='range'] {
+  @apply appearance-none cursor-pointer backdrop-blur-lg bg-primary/10 rounded-full border border-primary/20;
+
+  &::-webkit-slider-thumb {
+    @apply w-3 h-3 bg-primary/80 rounded-full appearance-none;
+    transition: background-color 0.2s ease;
+  }
+
+  &::-moz-range-thumb {
+    @apply w-3 h-3 bg-primary/80 rounded-full border-0;
+  }
+
+  &::-ms-thumb {
+    @apply w-3 h-3 bg-primary/80 rounded-full;
+  }
+}
+
+@layer utilities {
+  .draggable {
+    -webkit-app-region: drag;
+  }
+  .no-drag {
+    -webkit-app-region: no-drag;
+  }
+}
+
+img {
+  user-select: none !important;
+  -webkit-user-drag: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  pointer-events: none !important;
+}
+
+img::selection,
+img::-moz-selection {
+  user-select: none !important;
+  -webkit-user-drag: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  pointer-events: none !important;
+}
